[tool.poetry]
authors = ["Mamadou S Diallo <msdiallo@samplics.org>"]
description = "Select, weight and analyze complex sample data"
license = "MIT"
name = "samplics"
version = "0.5-dev"

readme = "README.md"

documentation = "https://samplics-org.github.io/samplics/"
homepage = "https://samplics-org.github.io/samplics//"
repository = "https://github.com/survey-methods/samplics"

keywords = ["sampling", "sample", "weighting", "estimation", "survey"]

classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

packages = [
  {include = "samplics", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.10"
scipy = ">=1.7"
numpy = ">=1.21"
polars = {extras = ["pandas", "pyarrow"], version = "^0.18.6"}
statsmodels = ">=0.13"
matplotlib = ">=3.4"
msgspec = ">=0.18.2"

[tool.poetry.group.dev.dependencies]
black = "^22.3"
# certifi = "^2023.7.22"
codecov = "^2.1"
mypy = "^0.960"
pytest = "^7.1"
pytest-cov = "^3.0"
ruff = "^0.0.280"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
line-length = 99
target-version = ["py310", "py311", "py312"]

# [tool.isort]
# atomic = true
# filter_files = true
# force_single_line = false
# include_trailing_comma = true
# known_first_party = "samplics"
# known_pandas = ["pandas", "numpy", "scipy", "statsmodels"]
# line_length = 99
# lines_after_imports = 2
# lines_between_types = 1
# multi_line_output = 3
# profile = "black"
# sections = ["FUTURE", "STDLIB", "THIRDPARTY", "PANDAS", "FIRSTPARTY", "LOCALFOLDER"]
# src_paths = ["src", "tests"]
# use_parentheses = true


[tool.ruff]
src = ["src", "tests"]

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["D", "E", "F", "W", "I001"]
ignore = ["D"] # for development we can ignore the docs

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 99

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = ["py310", "py311", "py312"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.isort]
known-first-party = ["samplics"]
known-third-party = ["matplotlib", "numpy",  "pandas", "polars", "pydantic", "scipy", "statsmodels"]
lines-after-imports = 2
lines-between-types = 1


[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.0"]
